# image-augzoo

./: .gitignore  README.md  pyproject.toml  update_readme.py
.github/workflows/: ci-py310.yml  ci-py37.yml  ci-py38.yml  ci-py39.yml  ci.yml
image_augzoo/: __init__.py
image_augzoo/core/: __init__.py  compose.py  identity.py  oneof.py  transform.py
image_augzoo/image_augzoo/: __init__.py  attentive_cutmix.py  bcplus_mix.py  blend.py  cutblur.py  cutmix.py  cutmixup.py  cutout.py  mixup.py  mra.py  random_elements.py  random_pixels.py  rgb_permutation.py  ricap.py
tests/: __init__.py  test_attentive_cutmix.py  test_bcplus_mix.py  test_blend.py  test_cutblur.py  test_cutmix.py  test_cutmixup.py  test_cutout.py  test_mixup.py  test_mra.py  test_random_elements.py  test_random_pixels.py  test_rgb_permutation.py  test_ricap.py  utils.py
