[tool.poetry]
name = "image-augzoo"
version = "0.1.0"
description = ""
authors = ["Yuta Sasaki"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
torch = "^1.11.0"
numpy = "^1.23.0"
opencv-python = "^4.6.0"
matplotlib = "^3.5.2"
albumentations = "^1.2.0"
timm = "^0.5.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.961"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
